--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   provider: ^6.0.1
   firebase_auth: ^3.3.0
   google_sign_in: ^5.2.1
+  font_awesome_flutter: ^9.2.0
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
