--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   google_sign_in: ^5.2.1
   font_awesome_flutter: ^9.2.0
   intl: ^0.17.0
+  cloud_firestore: ^3.1.1
 
 dev_dependencies:
   flutter_test:
