--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   font_awesome_flutter: ^9.2.0
   intl: ^0.17.0
   cloud_firestore: ^3.1.1
+  paginate_firestore: ^1.0.3
 
 dev_dependencies:
   flutter_test:
