--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   cloud_firestore: ^3.1.1
   paginate_firestore: ^1.0.3
   animations: ^2.0.2
+  image_picker: ^0.8.4+4
 
 dev_dependencies:
   flutter_test:
