--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   image_picker: ^0.8.4+4
   firebase_storage: ^10.2.4
   uuid: ^3.0.5
+  ntp: ^2.0.0
 
 dev_dependencies:
   flutter_test:
