--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   hive_flutter: ^1.1.0
   path_provider: ^2.0.2
   flutter_material_color_picker: ^1.1.0+2
+  date_time_picker: ^2.1.0
 
 dev_dependencies:
   flutter_test:
