finish create post

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,6 +3,10 @@
    <application
         android:label="check_bird"
         android:icon="@mipmap/ic_launcher">
+       <activity
+           android:name="com.yalantis.ucrop.UCropActivity"
+           android:screenOrientation="portrait"
+           android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
@@ -38,4 +42,5 @@
             android:name="flutterEmbedding"
             android:value="2" />
     </application>
+
 </manifest>
