--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,8 +49,7 @@ dependencies:
   hive: ^2.0.5
   hive_flutter: ^1.1.0
   path_provider: ^2.0.2
-  flutter_local_notifications: ^9.1.5
-  flutter_speed_dial: ^5.0.0+1
+  awesome_notifications: ^0.0.6+10
 
 dev_dependencies:
   flutter_test:
