--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,10 +37,8 @@ dependencies:
   provider: ^6.0.1
   firebase_auth: ^3.3.0
   google_sign_in: ^5.2.1
-  font_awesome_flutter: ^9.2.0
   intl: ^0.17.0
   cloud_firestore: ^3.1.1
-  paginate_firestore: ^1.0.3
   animations: ^2.0.2
   image_picker: ^0.8.4+4
   firebase_storage: ^10.2.4
@@ -68,6 +66,12 @@ dev_dependencies:
   flutter_lints: ^1.0.0
   build_runner: ^2.1.7
   hive_generator: ^1.1.1
+  flutter_launcher_icons: ^0.9.2
+
+flutter_icons:
+  android: true
+  ios: false
+  image_path: "assets/images/checkbird-logo.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
