--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,8 @@ dependencies:
   table_calendar: ^3.0.3
   awesome_notifications: ^0.0.6+10
   flutter_settings_screens: ^0.3.2-null-safety
+  video_player: ^2.2.10
+  chewie: ^1.1.0
 
 dev_dependencies:
   flutter_test:
