--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   shared_preferences: ^2.0.11
   video_player: ^2.2.10
   chewie: ^1.1.0
+  http: ^0.13.4
 
 dev_dependencies:
   flutter_test:
