--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.17.0 <3.2.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -35,28 +35,32 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   provider: ^6.0.1
-  firebase_auth: ^3.3.0
-  google_sign_in: ^5.2.1
+  google_sign_in: ^6.1.5
   intl: ^0.17.0
-  cloud_firestore: ^3.1.1
   animations: ^2.0.2
-  image_picker: ^0.8.4+4
-  firebase_storage: ^10.2.4
-  uuid: ^3.0.5
+  image_picker: ^1.0.4
+  uuid: ^4.0.0
   ntp: ^2.0.0
   hive: ^2.0.5
   hive_flutter: ^1.1.0
   path_provider: ^2.0.2
   flutter_material_color_picker: ^1.1.0+2
   date_time_picker: ^2.1.0
-  image_cropper: ^1.4.1
+  image_cropper: ^5.0.0
   table_calendar: ^3.0.3
-  awesome_notifications: ^0.0.6+10
+  awesome_notifications: ^0.7.4+1
   flutter_settings_screens: ^0.3.2-null-safety
   shared_preferences: ^2.0.11
   video_player: ^2.2.10
   chewie: ^1.1.0
-  http: ^0.13.4
+  http: ^1.1.0
+
+  ## Firebase
+  firebase_core: ^2.15.1
+  firebase_auth: ^4.9.0
+  cloud_firestore: ^4.9.1
+  firebase_storage: ^11.2.6
+
 
 dev_dependencies:
   flutter_test:
@@ -67,10 +71,10 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^1.0.0
+  flutter_lints: ^2.0.3
   build_runner: ^2.1.7
-  hive_generator: ^1.1.1
-  flutter_launcher_icons: ^0.9.2
+  hive_generator: ^2.0.1
+  flutter_launcher_icons: ^0.13.1
 
 flutter_icons:
   android: true
