--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,12 +74,26 @@ dev_dependencies:
   build_runner: ^2.1.7
   hive_generator: ^2.0.1
   flutter_launcher_icons: ^0.13.1
+  flutter_native_splash: ^2.3.6
 
 flutter_icons:
   android: true
   ios: false
   image_path: "assets/images/checkbird-logo.png"
 
+flutter_native_splash:
+  color: "#ffffff"
+  image: assets/images/checkbird-splash.png
+  color_dark: "#000000"
+  image_dark: assets/images/checkbird-splash.png
+
+  android_12:
+    image: assets/images/checkbird-splash.png
+    icon_background_color: "#ffffff"
+    image_dark: assets/images/checkbird-splash.png
+    icon_background_color_dark: "#000000"
+
+  web: false
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
