--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,10 +30,6 @@ dependencies:
   flutter:
     sdk: flutter
 
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
   provider: ^6.0.1
   google_sign_in: ^6.1.5
   intl: ^0.18.0
@@ -44,15 +40,18 @@ dependencies:
   hive: ^2.0.5
   hive_flutter: ^1.1.0
   path_provider: ^2.0.2
-  flutter_material_color_picker: ^1.1.0+2
+  flutter_material_color_picker: ^1.2.0
   image_cropper: ^5.0.0
   table_calendar: ^3.0.9
-  awesome_notifications: ^0.8.2
   flutter_settings_screens: ^0.3.2-null-safety
   shared_preferences: ^2.0.11
   video_player: ^2.2.10
   chewie: ^1.1.0
   http: ^1.1.0
+
+  ## NOTIFICATION
+  timezone: ^0.9.2
+  flutter_local_notifications: ^16.2.0
 
   ## Firebase
   firebase_core: ^2.15.1
