--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.17.0 <3.2.0"
+  sdk: ">=3.0.0 <4.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -31,33 +31,33 @@ dependencies:
     sdk: flutter
 
   provider: ^6.0.1
-  google_sign_in: ^6.1.5
+  google_sign_in: ^6.2.1
   intl: ^0.18.0
-  animations: ^2.0.2
-  image_picker: ^1.0.4
-  uuid: ^4.0.0
+  animations: ^2.0.11
+  image_picker: ^1.0.7
+  uuid: ^4.3.3
   ntp: ^2.0.0
   hive: ^2.0.5
   hive_flutter: ^1.1.0
-  path_provider: ^2.0.2
+  path_provider: ^2.1.2
   flutter_material_color_picker: ^1.2.0
   image_cropper: ^5.0.0
   table_calendar: ^3.0.9
   flutter_settings_screens: ^0.3.2-null-safety
   shared_preferences: ^2.0.11
-  video_player: ^2.2.10
-  chewie: ^1.1.0
-  http: ^1.1.0
+  video_player: ^2.8.2
+  chewie: ^1.7.5
+  http: ^1.2.0
 
   ## NOTIFICATION
   timezone: ^0.9.2
-  flutter_local_notifications: ^16.2.0
+  flutter_local_notifications: ^16.3.2
 
   ## Firebase
-  firebase_core: ^2.15.1
+  firebase_core: ^2.25.4
   firebase_auth: ^4.9.0
-  cloud_firestore: ^4.9.1
-  firebase_storage: ^11.2.6
+  cloud_firestore: ^4.15.4
+  firebase_storage: ^11.6.5
 
 
 dev_dependencies:
@@ -70,12 +70,12 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^3.0.1
-  build_runner: ^2.1.7
+  build_runner: ^2.4.8
   hive_generator: ^2.0.1
   flutter_launcher_icons: ^0.13.1
-  flutter_native_splash: ^2.3.6
+  flutter_native_splash: ^2.3.10
 
-flutter_icons:
+flutter_launcher_icons:
   android: true
   ios: false
   image_path: "assets/images/checkbird-logo.png"
